prevent zooming on textbox input on mobile

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -737,5 +737,5 @@ input:checked + .slider {
 }
 
 input {
-    font-size: 16px;
+    font-size: 16px !important;
 }
